feat: test new route

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
+[[redirects]]
+  from = "/users/auth/google"
+  to = "https://cknewsletter.herokuapp.com/users/auth/google"
+  status = 302
 
 [[redirects]]
   from = "/*"
