--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19"
